fixed the overwrapping text and link component spacing

--- a/src/index.css
+++ b/src/index.css
@@ -9,23 +9,26 @@
   border-style: none;
 }
 
-a {
-  text-decoration: none;
-  color: var(--color-info-light);
-}
-
-a:hover {
-  color: #535bf2;
-}
 html,
 body {
   color: aliceblue;
   background-color: #121414;
 }
+
 #root {
   height: 100vh;
   overflow-x: hidden;
   border: 1px solid #dce1eb;
+}
+
+a {
+  text-decoration: none;
+  max-width: 100%;
+  color: var(--color-info-light);
+}
+
+a:hover {
+  color: #535bf2;
 }
 
 img {
@@ -41,39 +44,3 @@ span {
   max-width: 100%;
   max-height: 100%;
 }
-/* h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
